@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.18 2004/11/05 16:53:28 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.19 2004/11/10 10:29:56 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -67,6 +67,8 @@ Exim version 4.44
 
 18. New variables $sender_verify_failure and $recipient_verify_failure contain
     information about exactly what failed.
+
+19. Added -dd to debug only the daemon process.
 
 
 Exim version 4.43
